# ghidra_decompiler_commons

./: .gitattributes  .gitignore  BUILD.ghidra  BUILD.ghidra_baseline  MODULE.bazel  README.md  ghidra.pat  go.mod  hugo.toml  integrationTest.py
.github/workflows/: hugo.yml
content/en/: _index.md
content/en/community_testbed_initiatives/: _index.md
content/en/docs/: _index.md
content/en/docs/Testbed_walkthrough/: Baseline.md  Datatests.md  Explorations.md  _index.md
content/en/docs/community_testbed_initiatives/: _index.md
content/en/docs/community_testbed_initiatives/thixotropist/: Challenges.md  Related_repos.md  Testbed_overview.md  _index.md
content/en/docs/community_testbed_initiatives/thixotropist/Walkthroughs/: Advanced_debugging.md  _index.md
content/en/docs/ghidra_decompiler_internals/: Action_database.md  Data_tests  Data_tests.md  Overview.md  Raw_Pcode.md  _index.md
plugins/: BUILD  framework.hh  inspector.hh  riscv.cc  riscv_csr.cc  vector_ops.cc  vector_stdlib.cc
test_data/: whisper_main.ghidra
