
module(
    name = "decompiler_commons",
    version = "0.1",
)

# Use the spdlog module for C++ logging support
bazel_dep(name = "spdlog", version = "1.15.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Our source baseline can be a public baseline or a project-specific baseline, perhaps tracking
# a Pull Request or fork

REFERENCE_URL = "https://github.com/NationalSecurityAgency/ghidra/archive/refs/tags/Ghidra_12.0.4_build.tar.gz"
REFERENCE_SHA256 = "2650b5c5f2615883db347157f88d15f6f06cd14e223156cd6b6034264081f5b4"

LOCAL_URL = "file:////tmp/ghidra_isa.tar.xz"
LOCAL_SHA256 = "02a9c20126b87a7e04bc5ff1a5c230e42fe1b885c3b74127de41a1a105f681b9"

# This archive loads and patches a local or remote archive
http_archive(
    name = "ghidra_patched",
    urls = [LOCAL_URL],
    sha256 = LOCAL_SHA256,
    build_file = "BUILD.ghidra",
    patch_strip= 1,
    # This patch implements thixotropist features under test
    patches = ["ghidra.pat"]
)
# This archive loads a local or remote archive, with no patches applied
http_archive(
    name = "ghidra_baseline",
    # This test tarball includes RISC-V ISA extensions but no changes to the Decompiler sources
    urls = [LOCAL_URL],
    sha256 = LOCAL_SHA256,
    build_file = "BUILD.ghidra_baseline",
)
